# ipeo_project

./: .gitignore  A1_Data_Exploration.ipynb  A2_CustomDataset.ipynb  A3_Data_Loaders.ipynb  B0_MLE_Benchmark.ipynb  B1_DeepLabv3.ipynb  B1_Deeplabv3plus.ipynb  B2_MSNet.ipynb  B3_Deeplabv3plus_NDVI.ipynb  B4_U_Net_Training.ipynb  README.md  config.py  inference.ipynb  pyproject.toml  requirements.txt
archive/: A2_CustomDataset.ipynb  B1_DeepLabv3.ipynb  R1_Create_Plots.ipynb  distribution_exploration.ipynb
config/: config.py
images/: image_10016.tif  label_10016.tif
misc/: distribution_exploration.ipynb
models/: _deeplab.py  deeplabv3plus.py  msnet.py  unet_model.py  unet_parts.py
notebooks/: A1_Data_Exploration.ipynb  B0_MLE_Benchmark.ipynb  B1_Deeplabv3plus.ipynb  B3_UNet.ipynb
utils/: data.py  evaluation.py  train.py  visualisation.py
